fixed dark mode background

--- a/src/App.css
+++ b/src/App.css
@@ -138,9 +138,13 @@ h1 {
   background-color: #333;
 }
 
-.dark body {
+.app.dark {
   background-color: #222; 
-  color: #fff; 
+  color: #555; 
+}
+
+.dark h1 {
+  color: #ffcc00; 
 }
 
 .dark .post {
@@ -218,5 +222,10 @@ h1 {
   right: 10px;
   color: #333;
   pointer-events: none; 
+}
+
+.dark .author-filter select {
+  background-color: #222; 
+  color: #fff; 
 }
 
